--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - pwd
   - cd ./docker-images/OracleDatabase/SingleInstance/dockerfiles/18.4.0
   - ls
-#  - docker build -t oracle/database:18.4.0-xe -f Dockerfile.xe .
+  - docker build -t oracle/database:18.4.0-xe -f Dockerfile.xe .
 #  - wget https://github.com/utPLSQL/utPLSQL/releases/download/v3.1.10/utPLSQL.zip
 #  - unzip utPLSQL.zip
 
