--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,13 @@ before_install:
   - git clone https://github.com/oracle/docker-images.git
   - pwd
   - cd ./docker-images/OracleDatabase/SingleInstance/dockerfiles/18.4.0
-  - ls
   - docker build -t oracle/database:18.4.0-xe -f Dockerfile.xe .
-#  - wget https://github.com/utPLSQL/utPLSQL/releases/download/v3.1.10/utPLSQL.zip
-#  - unzip utPLSQL.zip
+  - docker ps
+  - cd
+  - wget https://github.com/utPLSQL/utPLSQL/releases/download/v3.1.10/utPLSQL.zip
+  - unzip utPLSQL.zip
+  - cd ./utPLSQL
+  - ls
 
 addons:
   sonarcloud:
