--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,18 @@ services:
   - docker
 
 before_install:
+  - cd
   - git clone https://github.com/oracle/docker-images.git
   - cd ./docker-images/OracleDatabase/SingleInstance/dockerfiles/18.4.0
   - docker build -t oracle/database:18.4.0-xe -f Dockerfile.xe .
-  - docker ps -a
-  - docker image ls -a
   - cd
+  - mkdir scripts
+  - cd ./scripts
   - wget https://github.com/utPLSQL/utPLSQL/releases/download/v3.1.10/utPLSQL.zip
   - unzip utPLSQL.zip
-  - cd ./utPLSQL
-  - pwd
-  - ls
+  - echo "@./utPLSQL/source/install_headless.sql"
+  - docker run --name oracle/database:18.4.0-xe -p 1521:1521 -p 5500:5500 -e ORACLE_PWD=secret -v /home/travis/scripts:/opt/oracle/scripts/setup oracle/database:18.4.0-xe
+  - docker ps -a
 
 #addons:
 #  sonarcloud:
