--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ before_install:
   - cd ./scripts
   - wget https://github.com/utPLSQL/utPLSQL/releases/download/v3.1.10/utPLSQL.zip
   - unzip utPLSQL.zip
-  - echo "@./utPLSQL/source/install_headless.sql"
-  - docker run --name oracle/database:18.4.0-xe -p 1521:1521 -p 5500:5500 -e ORACLE_PWD=secret -v /home/travis/scripts:/opt/oracle/scripts/setup oracle/database:18.4.0-xe
+  - echo "@./utPLSQL/source/install_headless.sql" > 01_utplsql.sql
+  - docker run --name oracle-xe -p 1521:1521 -p 8080:8080 -e ORACLE_PWD=secret -v /home/travis/scripts:/opt/oracle/scripts/setup oracle/database:18.4.0-xe
   - docker ps -a
 
 #addons:
