--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - wget https://github.com/utPLSQL/utPLSQL/releases/download/v3.1.10/utPLSQL.zip
   - unzip utPLSQL.zip
   - echo "@/opt/oracle/scripts/setup/utPLSQL/source/install_headless.sql" > 01_utplsql.sql
-  - docker run --name oracle-xe -p 1521:1521 -p 8080:8080 -e ORACLE_PWD=secret -v /home/travis/scripts:/opt/oracle/scripts/setup oracle/database:18.4.0-xe
+  - docker run -d --name oracle-xe -p 1521:1521 -p 8080:8080 -e ORACLE_PWD=secret -v /home/travis/scripts:/opt/oracle/scripts/setup oracle/database:18.4.0-xe
   - docker ps -a
 
 #addons:
