--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,11 @@ before_install:
   - unzip -q utPLSQL.zip
   - echo "ALTER SESSION SET CONTAINER = XEPDB1;" >> 01_utplsql.sql
   - echo "@/opt/oracle/scripts/setup/utPLSQL/source/install_headless.sql" >> 01_utplsql.sql
+  - echo "ALTER SESSION SET CONTAINER = XEPDB1;" >> 02_demo_user.sql
   - echo "create user demo identified by "demo" default tablespace users quota unlimited on users;" >> 02_demo_user.sql
   - echo "grant create session, create sequence, create procedure, create type, create table, create view, create synonym to demo;" >> 02_demo_user.sql
+  - echo "@/opt/oracle/scripts/setup/msgraph_sdk.pks" >> 03_msgraph_sdk.sql
+  - echo "@/opt/oracle/scripts/setup/msgraph_sdk.pkb" >> 03_msgraph.sdk.sql
 #  - docker run -d --name oracle-xe -p 1521:1521 -p 5500:5500 -e ORACLE_PWD=secret -v /home/travis/scripts:/opt/oracle/scripts/setup oracle/database:18.4.0-xe
   - docker run --name oracle-xe -p 1521:1521 -p 5500:5500 -e ORACLE_PWD=secret -v /home/travis/scripts:/opt/oracle/scripts/setup oracle/database:18.4.0-xe
   - docker ps -a
