--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,9 @@ before_install:
   - echo "ALTER SESSION SET CONTAINER = XEPDB1;" >> 02_demo_user.sql
   - echo "create user demo identified by "demo" default tablespace users quota unlimited on users;" >> 02_demo_user.sql
   - echo "grant create session, create sequence, create procedure, create type, create table, create view, create synonym to demo;" >> 02_demo_user.sql
+  - echo "set define off;" >> 03_msgraph_sdk.sql
   - echo "ALTER SESSION SET CONTAINER = XEPDB1;" >> 03_msgraph_sdk.sql
-  - echo "ALTER SESSIION SET CUTTENT_SCHEMA = DEMO;" >> 03_msgraph_sdk.sql
+  - echo "ALTER SESSION SET CUTTENT_SCHEMA = DEMO;" >> 03_msgraph_sdk.sql
   - echo "@/opt/oracle/scripts/setup/msgraph_sdk.pks" >> 03_msgraph_sdk.sql
   - echo "@/opt/oracle/scripts/setup/msgraph_sdk.pkb" >> 03_msgraph.sdk.sql
 #  - docker run -d --name oracle-xe -p 1521:1521 -p 5500:5500 -e ORACLE_PWD=secret -v /home/travis/scripts:/opt/oracle/scripts/setup oracle/database:18.4.0-xe
